tests/soundness/token_shadowing_exploit.stderr
error[E0599]: no associated function or constant named `__ARCHMAGE_TIER_TAG` found for struct `X64V3Token` in the current scope
  --> tests/soundness/token_shadowing_exploit.rs:18:1
   |
16 | struct X64V3Token;
   | ----------------- associated function or constant `__ARCHMAGE_TIER_TAG` not found for this struct
17 |
18 | #[arcane]
   | ^^^^^^^^^ associated function or constant not found in `X64V3Token`
   |
   = note: this error originates in the attribute macro `arcane` (in Nightly builds, run with -Z macro-backtrace for more info)
